<resources>
    <string name="app_name">Kotlin Practice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="swipe_tabs">Swipe Tabs</string>
    <string name="recycler_view">Recycler View</string>
    <string name="retrofit">Retrofit</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="map">Map</string>
    <string name="music">Music</string>
    <string name="schedule">Schedule</string>
    <string name="home_fragment">Home</string>
</resources>
