<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/schedules"
        android:enabled="true"
        android:icon="@drawable/ic_schedule"
        android:title="@string/schedule"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/music"
        android:icon="@drawable/ic_music"
        android:title="@string/music"
        app:showAsAction="ifRoom" />

</menu>