<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="myportfolio.com.tabswithswipekotlin.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btn_swipe_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipe_tabs" />

    <Button
        android:id="@+id/btn_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view" />

    <Button
        android:id="@+id/btn_retrofit_api_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrofit" />

</LinearLayout>
